# harness-composer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  product_gist_harness_composer.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: document_summary.py  flight_booking.py
harness_composer/: __init__.py  composer.py  registry.py
harness_composer/adapters/: __init__.py  base.py
harness_composer/adapters/langchain/: __init__.py  adapter.py  callbacks.py
harness_composer/classifier/: __init__.py  base.py  rules_based.py  task_profile.py
harness_composer/composition/: __init__.py  engine.py  harness_config.py
tests/: test_classifier.py  test_components.py  test_composition.py  test_registry.py
