[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-composer"
version = "0.1.0"
description = "Dynamically compose the right agent harness for any task from pre-vetted, reusable components."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "harness-composer contributors" },
]
keywords = ["agents", "llm", "harness", "guardrails", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]
all = [
    "harness-composer[langchain,dev]",
]

[project.urls]
Repository = "https://github.com/routsom/harness-composer"
Issues = "https://github.com/routsom/harness-composer/issues"

[tool.hatch.build.targets.wheel]
packages = ["harness_composer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
